# document-extractor

./: .gitignore  .pre-commit-config.yaml  README.md  dex  pyproject.toml
src/: document_extractor.py
src/extractor/: __init__.py  drawio_extractor.py  excel_extractor.py  extractor_base.py  word_extractor.py
